maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:62: error: not found: value x
    var p = getIndication(x,y)
                          ^JediEscaper:62: error: not found: value y
    var p = getIndication(x,y)
                            ^JediEscaper:63: error: not found: value y
    if (y>0)
        ^JediEscaper:65: error: not found: value x
      var h = getIndication(x,y-1)
                            ^JediEscaper:65: error: not found: value y
      var h = getIndication(x,y-1)
                              ^JediEscaper:67: error: not found: value y
    if ((y+1)<getMondeHauteur())
         ^JediEscaper:69: error: not found: value x
      var b = getIndication(x,y+1)
                            ^JediEscaper:69: error: not found: value y
      var b = getIndication(x,y+1)
                              ^JediEscaper:71: error: not found: value x
    if (x>0)
        ^JediEscaper:73: error: not found: value x
      var g = getIndication(x-1,y)
                            ^JediEscaper:73: error: not found: value y
      var g = getIndication(x-1,y)
                                ^JediEscaper:75: error: not found: value x
    if ((x+1)<getMondeLargeur())
         ^JediEscaper:77: error: not found: value x
      var d = getIndication(x+1,y)
                            ^JediEscaper:77: error: not found: value y
      var d = getIndication(x+1,y)
                                ^JediEscaper:79: error: not found: value h
    if (h+1==p)
        ^JediEscaper:84: error: not found: value b
    else if(b+1==p)
            ^JediEscaper:89: error: not found: value g
    else if(g+1==p)
            ^