maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() 
{
  var xBiscuit = 0
  var yBiscuit = 0
  for (X <- 0 to (getMondeLargeur()-1))
  {
    for (Y <- 0 to (getMondeHauteur()-1))
    {
      if (aBiscuit(X,Y))
      {
        xBiscuit = X
        yBiscuit = Y
      }
    }
  }
  numerotation(xBiscuit,yBiscuit,0)
  suitChemin()
}


def numerotation(x:Int,y:Int,i:Int)
{
  if (getIndication(x,y)>i)
  {
    setIndication(x,y,i)
    if (y>0 )
    {
      if (!aMurNord(x,y))
      {
        numerotation(x,y-1,i+1);
      }
    }
    if (x>0)
    {
      if (!aMurOuest(x,y))
      {
        numerotation(x-1,y,i+1)
      }
    }
    if ((y+1)<getMondeHauteur())
    {
      if (!aMurNord(x,y+1))
      {
        numerotation(x,y+1,i+1)
      }
    }
    if ((x+1)<getMondeLargeur())
    {
      if (!aMurOuest(x+1,y))
      {
        numerotation(x+1,y,i+1)
      }
    }
  }
}

def suitChemin()
{
  while(!estSurBiscuit())
  {
    var p = getIndication(x,y)
    if (y>0)
    {
      var h = getIndication(x,y-1)
    }
    if ((y+1)<getMondeHauteur())
    {
      var b = getIndication(x,y+1)
    }
    if (x>0)
    {
      var g = getIndication(x-1,y)
    }
    if ((x+1)<getMondeLargeur())
    {
      var d = getIndication(x+1,y)
    }
    if (h+1==p)
    {
      setDirection(Direction.NORD)
      avance()
    }
    else if(b+1==p)
    {
      setDirection(Direction.SUD)
      avance()
    }
    else if(g+1==p)
    {
      setDirection(Direction.OUEST)
      avance()
    }
    else
    {
     setDirection(Direction.EST)
     avance()
    }
  }
}